--- a/allied-health.html
+++ b/allied-health.html
@@ -136,69 +136,100 @@
     <!-- =================  breadcrumb section starts  ================================= -->
     <section class="breadcrumb_section">
         <div class="image">
-            <img src="assets/images/breadcrumbs/vaccination.jpg" alt="breadcrumb">
+            <img src="assets/images/breadcrumbs/allied-health.jpg" alt="breadcrumb">
         </div>
     </section>
     <!-- =================  breadcrumb section ends  ================================= -->
 
 
-    <!-- =================  Vaccination Service section starts  ================================= -->
+    <!-- =================  Allied Health section starts  ================================= -->
     <section class="section_pd_tb">
         <div class="container">
             <div class="section_header mb-3">
                 <h2><span>Medical Staff</span></h2>
-                <h3>Vaccination Services</h3>
+                <h3>Allied Health</h3>
             </div>
             <div class="row padding_added_row vaccination_row">
                 <div class="col-lg-7 about_items about_item1">
                     <p>
-                        Contact our organisation for all your vaccination needs for your staff. Medical Staff is a provider of vaccination services to companies within a diverse range of industries including but not limited to healthcare, schools, construction, retail, corporate and more.
+                        Medical Staff is a national ISO 9001 accredited Recruitment Agency with offices throughout Australia. ISO 9001 accreditation means our Agency is quality assurance accredited – and we can guarantee our processes are compliant with the best practices in the industry, and that our mission of reliability, efficiency and integrity are ingrained in every aspect of our operation.
+                       <br><br>
+                        For almost 20  years, Medical Staff has been recruiting and supplying Healthcare staff. The growth of our extensive network of Hospitals and healthcare partners across the country led to a demand for Allied Health staffing, which has been included in our organisation’s services for many years.
                         <br><br>
-                        Medical Staff will organise a Nurse and/or Doctor to visit your facility on the days that suit you and your staff, and all equipment involving the storage and transport of the vaccines is taken care of by our staff.
-                        <br><br>
-                        Call our friendly team on 1300 10 50 10 for all your vaccination needs and enquiries.
+                        Medical Staff prides itself in supplying experienced, highly skilled and specialised Allied Health staff across Australia, to produce the best outcomes for both our healthcare professionals and our partner facilities.
                     </p>
                 </div>
-                <div class="col-lg-4 about_items">
+                <div class="col-lg-5 about_items">
                     <div class="image pt-4">
                         <a href="">
-                            <img src="assets/images/vaccination1.jpg" alt="vaccination">
+                            <img src="assets/images/allied-health1.jpg" alt="Allied Health">
                         </a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- =================Vaccination Service section ends  ================================= -->
+    <!-- ================= Allied Health section ends  ================================= -->
 
 
-    <!-- =================  Referral Bonus section starts  ================================= -->
-    <section class="section_pd_tb vc_bonus_section">
+    <!-- =================  Allied Service section starts  ================================= -->
+    <section class="section_pd_tb allied_service">
         <div class="container">
+            <div class="section_header mb-3">
+                <h2>Services</h2>
+            </div>
             <div class="row padding_added_row vaccination_row">
-                <div class="col-lg-7 about_items about_item1">
-                    <div class="vacch3">
-                      <h3>Attention Registered Nurses:</h3>
-                        <p>
-                            We employ registered nurses with Immunization Certificates as Team Leaders.
-                            <br><br>
-                            Nurses without immunization certification are welcome to apply, as they can work under the supervision of an immunization nurse.
-                            <br><br>
-                            Call Medical Staff on 1300 10 50 10 to find out more about the opportunities in your area.
-                        </p>
-                    </div>
-                </div>
-                <div class="col-lg-4 about_items">
-                    <div class="image pt-4">
-                        <a href="">
-                            <img src="assets/images/referral-bonus-intro.jpg" alt="about us">
-                        </a>
+                <div class="col-lg-12 about_items about_item1">
+                    <div class="allied_service_text">
+                       <p>For any immediate or future staffing needs please contact our team today. We have staff available for day to day booking or for future advance booking to cover your roster.</p>
+                       <p>Call us on <a href="tel:1300105010">1300 10 50 10</a> to speak with our friendly allocations team who can assist you in finding an experienced, motivated and qualified healthcare professionals and allied health staff to fit your needs.</p>
+                       <p>If you are a current client, please feel free to call us 24/7 or make an online booking.</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- ================= Referral Bonus section ends  ================================= -->
+    <!-- =================  Allied Service section ends  ================================= -->
+
+
+    <!-- =================  Allied Mission section starts  ================================= -->
+    <section class="section_pd_tb">
+        <div class="container">
+            <div class="section_header mb-3">
+                <h2>Our Mission</h2>
+            </div>
+            <div class="row padding_added_row vaccination_row">
+                <div class="col-lg-12 about_items about_item1">
+                    <div class="allied_service_text">
+                       <p>At Medical Staff our mission is 100% satisfaction of our clients. We have been successful in achieving this by our strict screening of candidates, compliances and offering only qualified and experienced staff. Our organisation recruits and places according to our client’s needs using tailored service solutions and a dedicated Account manager as your one-stop-shop for all staffing needs.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- =================  Allied Mission section ends  ================================= -->
+
+
+    <!-- =================  Allied Register section starts  ================================= -->
+     <section class="section_pd_tb allied_service">
+        <div class="container">
+            <div class="section_header mb-3">
+                <h2>Register</h2>
+            </div>
+            <div class="row padding_added_row vaccination_row">
+                <div class="col-lg-12 about_items about_item1">
+                    <div class="allied_service_text">
+                        <p>Please feel free to contact us if you have any queries or to join Medical Staff as a client.</p>
+
+                        <p>To request for more information about our services or registration please contact our team or send us an email at bookings@medicalstaff.com.au</p>
+                        
+                        <p>Call Medical Staff on 1300 10 50 10 to discuss your needs with the relevant State Manager.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- =================  Allied Register section ends  ================================= -->
 
 
     <section class="section_pd_tb full_bg_info_section">
